fixed social icon problem on mobile layout

--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -34,7 +34,6 @@ nav {
 }
 
 #sidebar_nav {
-	padding-left: 15%;
 	a { margin-bottom: 1em;}
 	a:link, a:visited { background-color: lighten($full, 30%); border: 1px solid lighten($full, 28%);outline:1px solid rgba(255,255,255,0.1);}
 	a:hover, a:active, a.selected {background-color: $full; color: black; border: 1px solid darken($full,2%);outline:1px solid rgba(255,255,255,0.1);}
@@ -55,14 +54,6 @@ nav {
 #sidebar_nav, #user_nav {
 	a {text-align: left; display: block; padding: 0 0 0 0.5em; overflow: hidden;}
 	li {width: 100%; overflow: hidden;}
-}
-//social
-#social_icons {
-	p {padding-left: 5%;}
-	a {width: 33%; float: left; margin: 0;padding: 0;}
-	a#facebook { color: #3B5998; }
-	a#twitter { color: #4099FF;}
-	a#googleplus { color: #d34836; }
 }
 
 #wrapper {
@@ -96,11 +87,25 @@ iframe { width: 100%; margin-top: 10em; overflow: hidden;}
 #tagline { display: none; position: relative; font-style: italic; font-size: 1.3em; font-weight: normal; text-indent: 1.3em; overflow: hidden;
 	span { color: $full;}
 }
+//social
+#social_icons {
+	p {padding-left: 5%;}
+	a {width: 33%; float: left; margin: 0;padding: 0;}
+	a#facebook { color: #3B5998; }
+	a#twitter { color: #4099FF;}
+	a#googleplus { color: #d34836; }
+}
 
-// media query
+
+// small screen defaults
+#sidebar_nav, #user_nav, #social_icons { padding-left: 0;}
+#social_icons a { margin-right: 5px; float: none;}
+
+// media query - below = big screen
 @media only screen and (min-width: 768px) {
 	
 	#logo {position: absolute; left: -30px; top: 30px; overflow: visible;}
 	#tagline {display: block; overflow: hidden;}
-	#sidebar_nav { padding-left: 0;}
+	#sidebar_nav, #user_nav, #social_icons { padding-left: 15%;}
+	#social_icons a { width: 33%; float: left; margin:0; padding: 0;}
 }
